# sparv-sbx-conllu

./: .bumpversion.toml  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  cliff.toml  pyproject.toml  ruff.toml
.github/workflows/: check.yml  release.yml  rolling.yml  test.yml
assets/deprel-cases/: deprel-cases_export.gold.deptree  deprel-cases_export.gold.xml
assets/en_ewt-ud-test/: en_ewt-ud-test_excerp_export.gold.deptree  en_ewt-ud-test_excerp_export.gold.xml
assets/long-token-to-text/: long-token-to-text_export.gold.deptree  long-token-to-text_export.gold.xml
assets/long-token-to-text/preserved_format/: long-token-to-text_export.gold.xml
assets/metadata/: .gitignore  config.yaml
assets/no-metadata/preserved_format/: empty-node_export.gold.xml  multiword_export.gold.xml  space-after-no_export.gold.xml
assets/paragraph-and-document/: paragraph-and-document_export.gold.deptree  paragraph-and-document_export.gold.xml
assets/paragraph-in-sentence/: paragraph-in-sentence_export.gold.deptree  paragraph-in-sentence_export.gold.xml
assets/sentence-comments/: sentence-comments_export.gold.deptree  sentence-comments_export.gold.xml
assets/texts/: deprel-cases.conllu  empty-node.conllu  en_ewt-ud-test_excerp.conllu  long-token-to-text.conllu  multiword.conllu  paragraph-and-document.conllu  paragraph-in-sentence.conllu  sentence-comments.conllu  space-after-no.conllu
docs/: multiword.md  ud-swedish-evalulation.md
examples/: .gitignore
examples/deprel-cases/: config.yaml
examples/deprel-cases/source/: deprel-cases.conllu
examples/en_ewt-ud-test/: config.yaml
examples/en_ewt-ud-test/source/: en_ewt-ud-test_excerp.conllu
examples/long-token-to-text/: config.yaml
examples/long-token-to-text/source/: long-token-to-text.conllu
examples/no-metadata/: README.md  config.yaml
examples/no-metadata/source/: empty-node.conllu  multiword.conllu  space-after-no.conllu
examples/paragraph-and-document/: config.yaml
examples/paragraph-and-document/source/: paragraph-and-document.conllu
examples/paragraph-in-sentence/: config.yaml
examples/paragraph-in-sentence/source/: paragraph-in-sentence.conllu
examples/sentence-comments/: config.yaml
examples/sentence-comments/source/: sentence-comments.conllu
scripts/: print_deptree.py  transform_readme.py
src/sbx_conllu/: __init__.py  conllu_import.py  metadata.yaml
tests/: test_conllu_import.py  test_hello.py
tests/__snapshots__/: test_conllu_import.ambr
